--- a/templates/basefront.html.twig
+++ b/templates/basefront.html.twig
@@ -6,7 +6,7 @@
     <div class="container">
         <!-- titre -->
         <div class="text-left">
-            <img src="{{ app.request.getBasePath()~'/banniere.jpg' }}" >
+            <img src="{{ app.request.getBasePath()~'/banniere.jpg' }}" alt="img" >
         </div>
         <!-- menu -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -20,7 +20,10 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('playlists') }}">Playlists</a>
-                    </li>                    
+                    </li>             
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('admin.formations') }}">Gestion</a>
+                    </li>  
                 </ul>
             </div>
         </nav>        
