--- a/templates/baseadmin.html.twig
+++ b/templates/baseadmin.html.twig
@@ -5,6 +5,9 @@
 
 {% block top %}
     <div class="container">
+        <div class="text-end">
+            <a href="{{ path('logout') }}">Se déconnecter</a>
+        </div>
         <div class="text-left">
             <img src="{{ app.request.getBasePath()~'/banniere.jpg' }}" alt="img">
         </div>
@@ -20,6 +23,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('admin.playlists') }}">Playlists</a>
                     </li>             
+                      <li class="nav-item">
+                        <a class="nav-link" href="{{ path('admin.categories') }}">Catégories</a>
+                    </li> 
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('admin.formations') }}">Gestion</a>
                     </li>
